# connections

./: .env.example  .gitignore  INTERVIEWER.md  LICENSE  README.md  main.py  pyproject.toml
data/: cryptic.json  easy.json  hard.json  medium.json
src/connections/: __init__.py  cli.py  exceptions.py  llm.py  puzzle.py  types.py  utils.py
tests/: test_connections.py
