[project]
name = "connections"
version = "0.1.0"
description = "LLM-powered Connections puzzle solver — technical challenge"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "typer>=0.26.7",
]

[project.scripts]
connections = "connections.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/connections"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
